More SonarCloud issues fixes, i.a. throwing specific exceptions in ViewToolsManager, making fields in MainMenuBar and FragmentsdataTableView final, adjusting some regex patterns, some manual linting, more documentation on how reflection is used to fill the data tables;